@@ -1,8 +1,12 @@
 New entries should be added at the top
 =======
 
+2004-06-19 anim_tk.py: Updated to use TkAgg by default (not GTK)
+           backend_gtk_py: Added '_' in front of private widget
+           creation functions - SC
+
 2004-06-17 backend_gtk.py: Create a GC once in realise(), not every
-           time draw() is called.
+           time draw() is called. - SC
 
 2004-06-16 Added new py2exe FAQ entry and added frozen support in
            get_data_path for py2exe - JDH
